--- a/src/pages/posts/lyon/post-3.mdx
+++ b/src/pages/posts/lyon/post-3.mdx
@@ -1,10 +1,10 @@
 ---
 layout: ../../../layouts/MarkdownPostLayout.astro
 title: Sharpening the Blade; Fermenting the Cabbage
-pubDate: 2024-02-29
+pubDate: 2024-04-27
 image:
-  url: "/river.jpg"
-  alt: ""
+  url: "/hill_view.jpg"
+  alt: "A view from Fourvière hill"
 ---
 
 import TabLink from "../../../components/TabLink.astro";
