--- a/src/pages/posts/lyon/post-3.mdx
+++ b/src/pages/posts/lyon/post-3.mdx
@@ -12,21 +12,19 @@ import Footnote from "../../../components/Footnote.astro";
 import FootnoteText from "../../../components/FootnoteText.astro";
 import FootnoteSection from "../../../components/FootnoteSection.astro";
 
-I have now been living in Lyon for a year now, almost. The photo is taken from Fourvière hill. A hill known for its basillica and <TabLink url="https://www.gallicagrapher.com/?terms=Fourvi%C3%A8re&cursor=0&context_year=1896&month=5">pilgrims</TabLink>. Once, while I was walking up the hill, daypack on back, I overhead a guy say "that guy must be a pilgrim"<Footnote index={1} tag="pilgrim" />. An understandable assumption, with my sturdy pants and propensity for striding. I don't feel like a pilgram, though. I have internalized more of a cyber mercenary, a consummate professional summoned for a task. I am here to work, partake of a few croissants, and depart. I have much in common with the person who repairs a bakery oven.
+I have now been living in Lyon for a year now, almost. The photo is taken from Fourvière hill. A hill known for its basilica and <TabLink url="https://www.gallicagrapher.com/?terms=Fourvi%C3%A8re&cursor=0&context_year=1896&month=5">pilgrims</TabLink>. Once, while I was walking up the hill, daypack on back, I overheard "that guy must be a pilgrim"<Footnote index={1} tag="pilgrim" />. An understandable assumption, with my sturdy pants and propensity for striding. I don't feel like a pilgrim, though. I have internalized a cyber mercenary, a consummate professional summoned for a task. I am here to work, partake of a few croissants, and depart. I have much in common with the person who repairs a bakery oven.
 
-I continue to maintain web applications, cook, roll dice, run, compost my food waste, hike to the grocery store, and pay my taxes. I recently completed my US federal return. Alas, because I haven't been in France for a full tax year, I don't qualify for the <TabLink url="https://www.irs.gov/individuals/international-taxpayers/foreign-earned-income-exclusion">Foreign Earned Income Exclusion</TabLink>. I don't mind, though. I enjoy the feeling of contributing. Sometime this week, or the next, I will need to stop by the Lyon Office of Public Finance to get my French tax number. I first stopped by the office in January. The polite officiant informed me that I should come back in April, since the tax season had not yet begun. A slogan on the wall read "vous avez le droit a l'erreur", or, "you have the right to make mistakes". I like that sentiment. Human-centered government design. This stuff is complicated.
+I continue to maintain web applications, cook, roll dice, run, compost my food waste, hike to the grocery store, and pay my taxes. I recently completed my US federal return. Alas, because I haven't been in France for a full tax year, I don't qualify for the <TabLink url="https://www.irs.gov/individuals/international-taxpayers/foreign-earned-income-exclusion">Foreign Earned Income Exclusion</TabLink>. I don't mind, though. I enjoy the feeling of contributing. Sometime this week, or the next, I stop by the Lyon Office of Public Finance to get my French tax number. I first went to the office in January. The polite officiant informed me that I should come back in April, since the tax season had not yet begun. A slogan on the wall read "vous avez le droit a l'erreur", or, "you have the right to make mistakes". I like that sentiment. Human-centered government design. This stuff is complicated.
 
 Alongside paying taxes, I am rolling dice. I joined a tabletop roleplaying game club a few months ago. I have met good people at the club. I love how strange the tabletop roleplay hobby is. A group of strangers sits around a table and creates a shared fiction. It is good to have a creative hobby. It is all the more good to have a communal hobby. TTRPGs are some of the most fun a group of brains can have! Intriguingly, the most popular game is not Dungeons and Dragons like in the States. I heard from fellow players that finding French versions of D&D books is difficult. In my few months of playing, I have partook in paranormal police mysteries, fantasy survival adventure, and more.
 
-In truth, that sums up my experience over these winter months. I'm not playing as much chess, though I might start that again. I enjoy the deep focus, the system 2 activation. I aim to travel more this spring. Annecy is at the top of my list, being a TER ride away from me. There is also a chef by the name of Jean Sulpice who has a restuaurant in Annecy. I vibe with his productive energy, which I assume bubbles up from the turquoise waters of the Annecy lake.
+In truth, that sums up my experience over these past winter months. I'm not playing as much chess, though I might start that again. I enjoy the deep focus, the system 2 activation. I aim to travel more this spring. Annecy is at the top of my list, being a TER ride away from me. There is also a chef by the name of Jean Sulpice who has a restuaurant in Annecy. I vibe with his productive energy, which I assume bubbles up from the turquoise waters of the Annecy lake.
 
-In sum, I continue to learn about France, Lyon, the people I come across, software. I will soon start "Writing an Interpreter in Go", a treatise by John Trumond. I enjoy the syntax of Golang. Simple, unabstracted, preferring long-term maintainability over short-term convenience. I hope to remain in a learning mindset for the rest of my life. Easy, it is, to neglect the associative neural net upstairs. To grow comfortable with the easy path. Being a foreigner, though, puts me in a mindset of humility, helpful for learning new things. I have only to botch the pronunciaton of "s'entender" to know that I know nothing. In the face of my ignorance, I laugh, and take notes!
+In sum, I continue to learn about France, Lyon, the people I come across, software. I will soon start "Writing an Interpreter in Go", a treatise by John Trumond. I enjoy the syntax of Golang. Simple, unabstracted, preferring long-term maintainability over short-term convenience. I hope to remain in a learning mindset for the rest of my life. Easy, it is, to neglect the associative neural net upstairs. To grow comfortable with the easy path. Being a foreigner, though, puts me in a mindset of humility, helpful for learning new things. I have only to botch the pronunciaton of "s'entender" to know that I know nothing. In the face of my ignorance, I laugh, and take notes.
 
 <FootnoteSection>
   <FootnoteText tag="pilgrim">
-    1. I am about 70% sure I heard him correctly. One of the peculiar bits about
-    lacking fluency is I frequently fill in gaps in my understanding with
-    whatever I imagine people thinking, and am able to convince myself it's the
-    truth.
+    1. I am about 70% sure I heard correctly. I tend to fill in gaps in my
+    understanding with whatever I imagine people thinking.
   </FootnoteText>
 </FootnoteSection>
