--- a/src/pages/posts/lyon/post-3.mdx
+++ b/src/pages/posts/lyon/post-3.mdx
@@ -24,7 +24,7 @@ In sum, I continue to learn about France, Lyon, the people I come across, softwa
 
 <FootnoteSection>
   <FootnoteText tag="pilgrim">
-    1. I am about 70% sure I heard correctly. I tend to fill in gaps in my
+    1. I am about 70% sure I heard correctly. I tend to fill gaps in my
     understanding with whatever I imagine people thinking.
   </FootnoteText>
 </FootnoteSection>
