--- a/src/pages/posts/lyon/post-3.mdx
+++ b/src/pages/posts/lyon/post-3.mdx
@@ -12,9 +12,9 @@ import Footnote from "../../../components/Footnote.astro";
 import FootnoteText from "../../../components/FootnoteText.astro";
 import FootnoteSection from "../../../components/FootnoteSection.astro";
 
-I have now been living in Lyon for a year, almost. The photo is taken from Fourvière hill. A hill known for its basilica and pilgrims. Once, while I was walking up the hill, daypack on back, I overheard "that guy must be a pilgrim"<Footnote index={1} tag="pilgrim" />. An understandable assumption, with my sturdy pants and propensity for striding. I don't feel like a pilgrim, though. I have internalized a cyber mercenary, a consummate professional summoned for a task. I am here to work, partake of a few croissants, and depart. I have much in common with the person who repairs a bakery oven.
+I have now been living in Lyon for a year, almost. The photo is taken from Fourvière hill. A hill known for its basilica and pilgrims. Once, while I was walking up the hill, daypack on back, I overheard "that guy must be a pilgrim"<Footnote index={1} tag="pilgrim" />. An understandable assumption, with my sturdy pants and propensity for striding. I don't feel like a pilgrim, though. I have internalized a cyber mercenary, a consummate professional summoned for a task. I am here to work, partake of a few croissants, and depart, like a person repairing a bakery oven.
 
-I continue to maintain web applications, cook, roll dice, run, compost my food waste, hike to the grocery store, and pay my taxes. I recently completed my US federal return. Alas, because I haven't been in France for a full tax year, I don't qualify for the <TabLink url="https://www.irs.gov/individuals/international-taxpayers/foreign-earned-income-exclusion">Foreign Earned Income Exclusion</TabLink>. I don't mind, though. I enjoy the feeling of contributing. Sometime this week, or the next, I stop by the Lyon Office of Public Finance to get my French tax number. I first went to the office in January. The polite officiant informed me that I should come back in April, since the tax season had not yet begun. A slogan on the wall read "vous avez le droit a l'erreur", or, "you have the right to make mistakes". I like that sentiment. Human-centered government design. This stuff is complicated.
+I continue to maintain web applications, cook, roll dice, run, compost my food waste, hike to the grocery store, and pay my taxes. I recently completed my US federal return. Alas, because I haven't been in France for a full tax year, I don't qualify for the <TabLink url="https://www.irs.gov/individuals/international-taxpayers/foreign-earned-income-exclusion">Foreign Earned Income Exclusion</TabLink>. I don't mind, though. I enjoy the feeling of contributing. Sometime this week, or the next, I will stop by the Lyon Office of Public Finance to get my French tax number. I first went to the office in January. The polite officiant informed me that I should come back in April, since the tax season had not yet begun. A slogan on the wall read "vous avez le droit a l'erreur", or, "you have the right to make mistakes". I like that sentiment. Human-centered government design. This stuff is complicated.
 
 Alongside paying taxes, I am rolling dice. I joined a tabletop roleplaying game club a few months ago. I have met good people at the club. I love how strange the tabletop roleplay hobby is. A group of strangers sits around a table and creates a shared fiction. It is good to have a creative hobby. It is all the more good to have a communal hobby. TTRPGs are some of the most fun a group of brains can have! Intriguingly, the most popular game is not Dungeons and Dragons like in the States. I heard from fellow players that finding French versions of D&D books is difficult. In my few months of playing, I have partook in paranormal police mysteries, fantasy survival adventure, and more.
 
